--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,5 +5,9 @@
   "vars": {
     "PUBLIC_API_BASE_URL": "https://cari-kata.kensvin28.workers.dev",
     "PUBLIC_MAX_WORD_LENGTH": "120"
+  },
+  "assets": {
+      "binding": "ASSETS",
+      "directory": ".svelte-kit/cloudflare"
   }
 }
